main.css
*{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html{
  font-size: 62.5%;
  font-family: sans-serif;
}

h2{
  margin: 2rem 0;
  font-size: 2.3rem;
  font-weight: 300;
}

h3{
  font-size: 2em;
}

p{
  font-size: 1.2rem;
  text-align: center;
  line-height: 2rem;
}

.header{
  width: 100%;
  height: 100vh;
  min-width: 320px;
  background-image: url("img/header.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.header > div{
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  margin-top: 3rem;
}

.header__list{
  list-style: none;
  margin: 0 0;
  display: flex;
  flex-wrap: wrap;
}

.header__item{
  margin-right: 2rem;
}

.header__item:last-of-type{
  margin-right: 0rem;
}

.header__item a{
  color: white;
  text-decoration: none;
  font-size: 1.8rem;
}

.header__img{
  min-width: 22rem;
}

.header__title{
  color: white;
  font-size: 2.8rem;
  line-height: 5rem;
  margin-bottom: 2rem;
}
/* //////////////////// */

.block-msn{
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.block-msn > div{
  width: 100%;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.block-msn__art{
  width: 28rem;
  /* min-width: 32rem; */
  height: 29rem;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

.block-msn__art > img{
  /* margin: 1.5rem 0; */
}

.block-msn__art > h3{
  /* margin: 1.5rem 0; */
}

.block-msn__art > p{
  /* margin: 1.5rem 0; */
  text-align: center;
  align-self: flex-end;
}

/* ///////////// */
.main{
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.main > div{
  width: 100%;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  margin-bottom: 1rem;
}

.main__casa{
  width: 30rem;
  height: 40rem;
  background-color: #f5f5f5;
  border: 0.1rem solid  #c0c0c0;
  margin-bottom: 2rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.main__casa > img{
  width: 100%;
}

.main__casa > h3{
  margin-left: 1rem;
}

.main__casa > p{
  text-align: left;
  margin-left: 1rem;
}

.main_precio{
  color: #71b11f;
}

.main__casa > button{
  background-color: #df8716;
  border: 1rem solid #df8716;
  color: white;
  text-decoration: none;
  font-size: 1.5rem;
  margin: 1rem;
}

.main__ver-mas{
  align-self: flex-end;
  background-color: #71b11f;
  border: 1rem solid #71b11f;
  color: white;
  text-decoration: none;
  font-size: 1.5rem;
  margin-bottom: 2rem;
}

/* //////////////////// */

.contacto{
  width: 100%;
  height: 40vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;

  background-image: url(./img/encuentra.jpg);
  background-repeat: no-repeat;
  background-size: cover;

  color: white;
}

.contacto > h3{
  font-size: 3rem;
}
.contacto > p{
  text-align: left;
  margin: 2rem 0;
}
.contacto > button{
  background-color: #df8716;
  border: 0.5rem solid #df8716;
  color: white;
  text-decoration: none;
  font-size: 2rem;
}

/* ///////////////////////// */

.multimedia{
  width: 100%;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.blog{
  width: 60%;
  min-width: 32rem;
  text-align: center;
  flex-grow: 1;
}

.articulo{
  width: 100%;
  min-width: 32rem;
  display: flex;
  text-align: start;
  margin: 0 auto;
  margin-top: 2rem;
}

.articulo img{
  width: 20rem;
}

.articulo h3{
  margin-left: 1rem;
  margin-bottom: 1rem;
}
.articulo p{
  text-align: start;
  margin-left: 1rem;
  margin-bottom: 1rem;
}

.articulo span{
  color: #71b11f;
}


.testimonio{
  width: 40%;
  min-width: 32rem;
  text-align: center;
  flex-grow: 2;
}

.testimonio > article{
  width: 90%;
  min-width: 30rem;
  background-color: #71b11f;
  margin: 0 auto;
  padding: 4rem;
  color: white;
  font-size: 4rem;
  border-radius: 2rem;
}

.testimonio p, blockquote{
  font-size: 1.8rem;
  text-align: start;
  line-height: 4rem;
}

.testimonio p{
  text-align: right;
  font-weight: bold;
}

#comilla{
  font-size: 5rem;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
}

/* ////////////////////// */

.footer{
  width: 100vw;
  height: 5rem;
  background-color: #323232;
  display: flex;
  justify-content: space-between;
  margin-top: 2rem;
}

.footer  ul{
  height: 100%;
  text-decoration: none;
  font-size: 1.5rem;
  list-style: none;
  color: white;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.footer ul > li{
  margin-right: 1rem;
}

#derechos{
  margin: 0;
}

.container{
  padding: 0 5rem;
}


@media (max-width: 768px){
  .container{
    padding: 0 1rem;
  }
  .block-msn > div{
    justify-content: center;
  }

  .main > div{
    justify-content: center;
  }

  .footer  ul{
    font-size: 1.2rem;
  }
}

